RESOLVED FIXED 41557
Special handling of <rp> and <rt> tags
https://bugs.webkit.org/show_bug.cgi?id=41557
Summary Special handling of <rp> and <rt> tags
Adam Barth
Reported 2010-07-02 19:41:02 PDT
Special handling of <rp> and <rt> tags
Attachments
Patch (7.45 KB, patch)
2010-07-02 19:42 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2010-07-02 19:42:25 PDT
Eric Seidel (no email)
Comment 2 2010-07-02 20:43:45 PDT
Comment on attachment 60430 [details] Patch OK. I assume the expected results are from minefield?
Adam Barth
Comment 3 2010-07-02 20:45:49 PDT
Yep
WebKit Commit Bot
Comment 4 2010-07-02 23:32:27 PDT
Comment on attachment 60430 [details] Patch Clearing flags on attachment: 60430 Committed r62436: <http://trac.webkit.org/changeset/62436>
WebKit Commit Bot
Comment 5 2010-07-02 23:32:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.