2010-07-02  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Special handling of <rp> and <rt> tags
        https://bugs.webkit.org/show_bug.cgi?id=41557

        There didn't seem to be test coverage of these cases in the suite, so I
        added a couple tests.

        * html5lib/resources/webkit01.dat:
        * html5lib/runner-expected-html5.txt:
        * html5lib/runner-expected.txt:
        * html5lib/webkit-resumer-expected.txt:
2010-07-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Special handling of <rp> and <rt> tags
        https://bugs.webkit.org/show_bug.cgi?id=41557

        So sayeth the spec.

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processStartTag):

Canonical link: https://commits.webkit.org/53351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62436 268f45cc-cd09-0410-ab3c-d52691b4dbfc